FEATURE: Added new tutorials for A3, moved them into their own directory

--- a/a2.md
+++ b/a2.md
@@ -52,9 +52,7 @@ To match this solution you must have:
 
 ## Tutorial Video
 
-([Tutorial 2 video](https://youtu.be/O2o0CBx2hto))
-
-This tutorial video covers how to create a small game in WPF, and covers hoe to use the Timers class and recaps event handling for UI elements.
+* [Whack-a-mole](wpf-tutorials/timers.md)
 
 ## Hints
 
