--- a/a3.md
+++ b/a3.md
@@ -40,17 +40,20 @@ To match this solution you must have:
 
 ## Tutorial Video
 
-NOTE: These are not prepared yet.
+Each of the following mini-tuorials will give you the basic building blocks to put this assignment together.
 
-<!-- ([Tutorial 3 video]()) -->
+1. [Event handling for mouse events](wpf-tutorials/line-drawing.md)
+2. [Images and animation](wpf-tutorials/images-and-animation.md)
+3. [Drag and drop](wpf-tutorials/drag-and-drop.md)
+
 
 ## Hints
 
-1. `Canvas` element by default doesn't have a "touchable" space. Set the `Background` to `Transparent` (or another colour) to make it work with drag and drop ([Stackoverflow post](https://stackoverflow.com/questions/7762957/why-doesnt-wpf-canvas-alow-drop)). It also doesn't receive mouse vents until this is set.
+1. `Canvas` element by default doesn't have a "touchable" space. Set the `Background` to `Transparent` (or another colour) to make it work with drag and drop ([Stackoverflow post](https://stackoverflow.com/questions/7762957/why-doesnt-wpf-canvas-alow-drop)). It also doesn't receive mouse events until this is set.
 2. You can add items to the `Canvas` by adding to its `Children` collection (e.g. `this.canvas.Children.Add(myImage);`).
 3. WPF elements have a lot of properties that you can request by using `GetProperty` (and sometimes set using `SetProperty`). Some that you may find useful here include: `Canvas.LeftProperty`, `Canvas.TopProperty`, and `Panel.ZIndexProperty`. For example, you could request a button's X position by asking: `button.GetProperty(Canvas.LeftProperty)`. Similarly, you could set it by using `button.SetProperty(Canvas.TopProperty)`.
 4. You will likely need to animate the X position of the images independently of the Y position. But, you can fire both animations off at the same time.
-5. Weird GOTCHA: after runnning a `DoubleAnimation`, you cannot set the value of a dependency property from another part of the code ([see this Stackoverflow article](https://stackoverflow.com/questions/960322/in-wpf-after-doubleanimation-uielement-property-cannot-be-changed)). To get around this, take the following steps: (a) attach to the `Completed` event handler; (b) in that event handler, explicitly set the final value of the dependency property, and (c) restart a new animation with the animationtimeline set to null. For example, if you were setting the opacity of an image to 100% opaque at the end of the animation, you would use the following: `image.SetValue(UIElement.OpacityProperty, 1.0); image.BeginAnimation(UIElement.OpacityProperty, null);`
+5. Weird GOTCHA: after runnning a `DoubleAnimation`, you cannot set the value of a dependency property from another part of the code ([see this Stackoverflow article](https://stackoverflow.com/questions/960322/in-wpf-after-doubleanimation-uielement-property-cannot-be-changed)). To get around this, take the following steps: (a) attach to the `Completed` event handler; (b) in that event handler, explicitly set the final value of the dependency property, and (c) restart a new animation with the animationtimeline set to null. For example, if you were setting the opacity of an image to 100% opaque at the end of the animation, you would use the following: `image.SetValue(UIElement.OpacityProperty, 1.0);` `image.BeginAnimation(UIElement.OpacityProperty, null);`
 6. You will likely need to capture and process `MouseDown` and `MouseMove` events for each of the `Image` controls that you add on the `Canvas`. Make sure you're only moving `Image` items when they are dragged!
 
 ## Grading Rubric
@@ -61,7 +64,7 @@ A check grade is awarded when all the specifications above have been met.
 
 A check- grade is awarded when some requirements from the specifications are missing or implemented incorrectly. 
 
-A check+ grade can be awarded if you meet all the specifications and to the design or functionality (e.g. do not stretch/squish images but still arrange nicely as grid; allow for images to be loaded to a specified size; implement slideshow functionality, etc.)
+A check+ grade can be awarded if you meet all the specifications and to the design or functionality (e.g. do not stretch/squish images but still arrange nicely as grid; allow for images to be loaded to a specified size; implement slideshow functionality; handle drag drops from URLs from a webpage, etc.)
 
 ## No Late Assignments
 
