FIX: P2.md 3 tasks for TCSD -> 1 task

--- a/p2.md
+++ b/p2.md
@@ -14,7 +14,7 @@ Time permitting, I will make time available for you to do this session during tu
 * **Select and polish ideas**. From your affinity diagramming session, select the three most promising ideas. Add annotations and/or provide descriptions where appropriate for these three ideas.
 * **Refine ideas and create storyboard**. Select one of the three promising ideas, and construct a storyboard that illustrates its context of use (in relation to a task), how it would be used. This should depict some of the interface, and how a user would interact with it to perform the tasks you identified in P1.
 * **Video prototype**. Based on the storyboard, construct a video prototype (no more than 2-3 minutes) that illustrates how your system would be used. Be sure to illustrate at least one complete task scenario. _This can be uploaded to YouTube or saved in a cloud storage service._
-* **Task-centered system walkthrough.** Based on [the template](http://hcitang.org/uploads/Teaching/481-tcsd-walkthrough-template.docx), and three of the tasks you identified from P1, conduct a task-centered system walkthrough based on your storyboard and video prototype. If you decide now that some of these tasks need to be revised based on your research, then do so.
+* **Task-centered system walkthrough.** Based on [the template](http://hcitang.org/uploads/Teaching/481-tcsd-walkthrough-template.docx), one of the tasks you identified from P1, conduct a task-centered system walkthrough based on your storyboard and video prototype. If you decide now that some of the tasks that you had put together in P1 need to be revised based on your research (i.e. it doesn't match an actual use case), then rearticulate the task in your P1 page (and indicate that this has been done here).
 
 ## Deliverable
 * You deliver this project component via your GitHub repo as a working webpage.
@@ -25,7 +25,6 @@ Time permitting, I will make time available for you to do this session during tu
 * Develop a one or two paragraph **reflection** section that discusses this entire ideation process -- what went well for your group, what went poorly, what would you do differently if you were to do it again.
 
 ## Grading Sheet
-* Ensure that your grading sheet is placed in front of the section of this component.
 * Look on the [grading sheet page](project-grading-sheets.md) for the printable grading sheet.
 
 ## Resources
