FIX: a4.md typo

--- a/a4.md
+++ b/a4.md
@@ -12,6 +12,7 @@ You will deliver a written report as a PDF via D2L.
 
 Choose one design problem. From here, identify one method from each of the four IDEO categories (look, listen, try, and learn) that you could conduct to develop an understanding of the design problem and the users in it. Thus, choose a total of four methods -- one from each of the IDEO categories. Ideally, the four methods you choose complement one another. Justify your choice of each method for the problem, and how the four methods you choose for that design problem could help triangulate a researcher's understanding.
 
+Design problems (choose one):
 * How should we design technology to allow people who are house-bound to explore the outdoors?
 * How should we design technology so that airplane mechanics can get a remote consult (e.g. from an expert)?
 * How can we design technology to provide ambient awareness of in-home energy usage?
