FIX: a4.md Clarity on how to complete the assignment

--- a/a4.md
+++ b/a4.md
@@ -10,12 +10,17 @@ For this assignment, you will practice selecting and justifying the choice of ID
 
 You will deliver a written report as a PDF via D2L.
 
-Choose one design problem. From here, identify one method from each of the four IDEO categories (look, listen, try, and learn) that you could conduct to develop an understanding of the design problem and the users in it. Thus, choose a total of four methods -- one from each of the IDEO categories. Ideally, the four methods you choose complement one another. Justify your choice of each method for the problem, and how the four methods you choose for that design problem could help triangulate a researcher's understanding.
+Choose one design problem. From here, identify one method from each of the four IDEO categories (look, listen, try, and learn) that you could conduct to develop an understanding of the design problem and the users in it. Thus, choose a total of four methods -- one from each of the IDEO categories. The four methods you choose should complement one another.
 
 Design problems (choose one):
 * How should we design technology to allow people who are house-bound to explore the outdoors?
 * How should we design technology so that airplane mechanics can get a remote consult (e.g. from an expert)?
 * How can we design technology to provide ambient awareness of in-home energy usage?
+
+From here, you need to do two things:
+1. Explain **how** you would apply the method with sufficient detail that your manager would be able to do it without you.
+2. Justify **why** the method is a good one in this context.
+3. Explain how the methods **complement** one another (i.e. fill in gaps knowledge that other methods leave open).
 
 Your report should be roughly 3/4 to 1 physical page long. Use headers to delineate the different sections of the report.
 
