FIX: a4.md Formatting, and correct link to grading rubric

--- a/a4.md
+++ b/a4.md
@@ -13,12 +13,15 @@ You will deliver a written report as a PDF via D2L.
 Choose one design problem. From here, identify one method from each of the four IDEO categories (look, listen, try, and learn) that you could conduct to develop an understanding of the design problem and the users in it. Thus, choose a total of four methods -- one from each of the IDEO categories. The four methods you choose should complement one another.
 
 Design problems (choose one):
+
 * How should we design technology to allow people who are house-bound to explore the outdoors?
+
 * How should we design technology so that airplane mechanics can get a remote consult (e.g. from an expert)?
+
 * How can we design technology to provide ambient awareness of in-home energy usage?
 
-From here, you need to do two things:
-1. Explain **how** you would apply the method with sufficient detail that your manager would be able to do it without you.
+From here, you need to do three things:
+1. Explain **how** you would apply each IDEO method (one from each of the categories) with sufficient detail that your manager would be able to do it without you.
 2. Justify **why** the method is a good one in this context.
 3. Explain how the methods **complement** one another (i.e. fill in gaps knowledge that other methods leave open).
 
@@ -28,5 +31,5 @@ Use 12-pt Times font with 1" margin on all sides.
 
 ## Grading Rubric
 
-The grading rubric for this assignment is here: [481-A2-grading-rubric.pdf](http://www.hcitang.org/uploads/Teaching/481-A2-grading-rubric.pdf)
+The grading rubric for this assignment is here: [481-A4-grading-rubric.pdf](http://www.hcitang.org/uploads/Teaching/481-A4-grading-rubric.pdf)
 
